--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,7 +8,7 @@
     <declare-styleable name="CombatantInfoFragment">
         <attr name="combatantTag" format="string" />
     </declare-styleable>
-    <declare-styleable name="ValueSetterWidget">
+    <declare-styleable name="ValueSetter">
         <attr name="pointCost" format="integer" />
         <attr name="valueName" format="string" />
         <attr name="valueDefault" format="integer" />
