More code trimming. Solved small bug with morality and willpower value setters not working.

--- a/app/src/main/res/layout/fragment_view_character_scroll.xml
+++ b/app/src/main/res/layout/fragment_view_character_scroll.xml
@@ -891,6 +891,7 @@
                         app:showEditionPanel="false"
                         app:traitCategory="@string/cat_derived"
                         app:valueDefault="1"
+                        app:valueMaximum="10"
                         app:valueName="@string/trait_morality"/>
 
                     <view
@@ -912,6 +913,7 @@
                         app:showEditionPanel="false"
                         app:traitCategory="@string/cat_derived"
                         app:valueDefault="1"
+                        app:valueMaximum="10"
                         app:valueName="@string/trait_willpower"/>
                 </LinearLayout>
             </LinearLayout>
