--- a/app/src/main/res/layout/fragment_pager.xml
+++ b/app/src/main/res/layout/fragment_pager.xml
@@ -28,7 +28,8 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/button_next"/>
+            android:text="@string/button_next"
+            android:enabled="false"/>
     </LinearLayout>
 
 </LinearLayout>
